added truncate to blog posts

--- a/blog/2023-05-15-dayzed.mdx
+++ b/blog/2023-05-15-dayzed.mdx
@@ -11,6 +11,8 @@ Dayzed on first look was little bit confusing. Their offical documentation is li
 
 Now I think I will use it for all of my projects that require date picker.
 
+<!--truncate-->
+
 ## How to install Dayzed
 
 ```bash
