--- a/blog/2023-05-17-cap-rover.mdx
+++ b/blog/2023-05-17-cap-rover.mdx
@@ -9,6 +9,8 @@ tags: [self-hosting]
 
 You are probably familiar with cPanel, a web hosting control panel that allows you to manage your websites, databases, and other services. CapRover is a self-hosted, open-source alternative to cPanel. It is a web-based app deployment &amp; management platform for your Docker-compose apps. It is a free and open-source project that you can install on your own server. It is a great tool for developers and system administrators who want to deploy their apps quickly and easily.
 
+<!--truncate-->
+
 ## What are requirements?
 
 To see all requirements visit CapRover documentation website
